@@ -17,6 +17,8 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Changes in behavior
 
+   seq no longer accepts 0 value as increment argument.
+
    stat now outputs nanosecond information for time stamps even if
    they are out of localtime range.
 
